# Cyberpunk2077-VR-OpenSource

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md
.coordination/archives/: handoff_claude-85088.json  handoff_claude-85088_latest.json  session_claude-85088_2026-01-28T06-49-13-470Z.json
include/: CameraHook.hpp  D3D12Hook.hpp  InputHook.hpp  PatternScanner.hpp  ThreadSafe.hpp  Utils.hpp  VRSettings.hpp  VRSystem.hpp
src/: CameraHook.cpp  D3D12Hook.cpp  InputHook.cpp  Main.cpp  PatternScanner.cpp  TestBuild.cpp  VRSettings.cpp  VRSystem.cpp
